--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mean-app-server",
   "version": "0.0.1",
   "scripts": {
-    "run": "nodemon server.js"
+    "start": "nodemon server.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongoose": "^6.9.2"
   },
